--- a/index.html
+++ b/index.html
@@ -34,17 +34,20 @@
 
     </header>
     <main>
-        <div class="portefolio_titel">
-            <p>FØRSTE</p>
-            <p>SEMESTER</p>
-            <p>PÅ MMD</p>
+        <div>
+            <div></div>
+            <div class="portefolio_titel">
+                <p>FØRSTE</p>
+                <p>SEMESTER</p>
+                <p>PÅ MMD</p>
+            </div>
         </div>
 
         <section class="vaelg_tema">
             <a href="tema2.html">
-                <div class="temax zoom_test">
-                    <div class="temax_img">
-                        <img src="" alt="">
+                <div class="temax test">
+                    <div class="temax_img zoom_test">
+                        <img src="billede3.jpg" alt="">
                     </div>
                     <p>Tema 2</p>
                 </div>
@@ -59,31 +62,31 @@
             <a href="tema3.html">
                 <div class="temax">
                     <div class="temax_img"></div>
-                    <p>Tema 2</p>
+                    <p>Tema 3</p>
                 </div>
             </a>
             <a href="tema4.html">
                 <div class="temax">
                     <div class="temax_img"></div>
-                    <p>Tema 2</p>
+                    <p>Tema 4</p>
                 </div>
             </a>
             <a href="tema5.html">
                 <div class="temax">
                     <div class="temax_img"></div>
-                    <p>Tema 2</p>
+                    <p>Tema 5</p>
                 </div>
             </a>
             <a href="tema6.html">
                 <div class="temax">
                     <div class="temax_img"></div>
-                    <p>Tema 2</p>
+                    <p>Tema 6</p>
                 </div>
             </a>
             <a href="ommig.html">
                 <div class="temax">
                     <div class="temax_img"></div>
-                    <p>Tema 2</p>
+                    <p>Om mig</p>
                 </div>
             </a>
         </section>
