--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         <section class="vaelg_tema">
             <a href="tema2.html">
-                <div class="temax test">
-                    <div class="temax_img zoom_test">
-                        <img src="billede3.jpg" alt="">
+                <div class="temax">
+                    <div class="ramme_og_filter">
+                        <img src="fotos/tema_1_foto1.JPG" alt="">
                     </div>
                     <p>Tema 2</p>
                 </div>
@@ -61,31 +61,41 @@
 
             <a href="tema3.html">
                 <div class="temax">
-                    <div class="temax_img"></div>
+                    <div class="ramme_og_filter">
+                        <img src="fotos/tema_3_foto111.JPG" alt="Tema 3">
+                    </div>
                     <p>Tema 3</p>
                 </div>
             </a>
             <a href="tema4.html">
                 <div class="temax">
-                    <div class="temax_img"></div>
+                    <div class="ramme_og_filter">
+                        <img src="fotos/tema_4_foto.JPG" alt="">
+                    </div>
                     <p>Tema 4</p>
                 </div>
             </a>
             <a href="tema5.html">
                 <div class="temax">
-                    <div class="temax_img"></div>
+                    <div class="ramme_og_filter">
+                        <img src="fotos/05_tema_foto222.jpg" alt="">
+                    </div>
                     <p>Tema 5</p>
                 </div>
             </a>
             <a href="tema6.html">
                 <div class="temax">
-                    <div class="temax_img"></div>
+                    <div class="ramme_og_filter">
+                        <img src="fotos/tema_5_foto.JPG" alt="">
+                    </div>
                     <p>Tema 6</p>
                 </div>
             </a>
             <a href="ommig.html">
                 <div class="temax">
-                    <div class="temax_img"></div>
+                    <div class="temax_img">
+                        <img src="fotos/tema_5_foto.JPG" alt="">
+                    </div>
                     <p>Om mig</p>
                 </div>
             </a>
