--- a/ommig.html
+++ b/ommig.html
@@ -9,13 +9,39 @@
     <meta name="robots" content="noindex" />
     <!-- favicon herunder -->
     <!-- Css -->
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="menu.css">
+
     <!-- indsæt titel -->
     <title>Om mig</title>
 </head>
 
 <body>
-    <header></header>
+    <header>
+
+
+
+        <nav>
+            <div class="logo"> <a href="index.html"> <img src="logo.svg" alt="logo"></a></div>
+            <ul class="menu_liste">
+
+                <li><a href="tema2.html" class="nav_link">Tema 2</a></li>
+                <li><a href="tema3.html" class="nav_link">Tema 3</a></li>
+                <li><a href="tema4.html" class="nav_link">Tema 4</a></li>
+                <li><a href="tema5.html" class="nav_link">Tema 5</a></li>
+                <li><a href="tema6.html" class="nav_link">Tema 6</a></li>
+                <li><a href="ommig.html" class="nav_link">Om mig</a></li>
+
+            </ul>
+            <div class="burger">
+                <span class="burger_bar"></span>
+                <span class="burger_bar"></span>
+                <span class="burger_bar"></span>
+            </div>
+        </nav>
+
+    </header>
     <main></main>
     <footer></footer>
+    <script src="javascript.js"></script>
 </body>
