--- a/ommig.html
+++ b/ommig.html
@@ -7,9 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex" />
+    <!-- fonte -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:wght@300;400;500;600&display=swap"
+        rel="stylesheet">
     <!-- favicon herunder -->
     <!-- Css -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="menu.css">
 
     <!-- indsæt titel -->
@@ -24,13 +30,13 @@
         <nav>
             <div class="logo"> <a href="index.html"> <img src="logo.svg" alt="logo"></a></div>
             <ul class="menu_liste">
-
-                <li><a href="tema2.html" class="nav_link">Tema 2</a></li>
-                <li><a href="tema3.html" class="nav_link">Tema 3</a></li>
-                <li><a href="tema4.html" class="nav_link">Tema 4</a></li>
-                <li><a href="tema5.html" class="nav_link">Tema 5</a></li>
-                <li><a href="tema6.html" class="nav_link">Tema 6</a></li>
-                <li><a href="ommig.html" class="nav_link">Om mig</a></li>
+                <li class="portfolio_om_mig">Portfolio</li>
+                <li><a href="tema2.html" class="nav_link nav_tema">Tema 2</a></li>
+                <li><a href="tema3.html" class="nav_link nav_tema">Tema 3</a></li>
+                <li><a href="tema4.html" class="nav_link nav_tema">Tema 4</a></li>
+                <li><a href="tema5.html" class="nav_link nav_tema">Tema 5</a></li>
+                <li><a href="tema6.html" class="nav_link nav_tema">Tema 6</a></li>
+                <li class="nav_ommig"><a href="ommig.html" class="nav_link portfolio_om_mig">Om mig</a></li>
 
             </ul>
             <div class="burger">
