--- a/tema2.html
+++ b/tema2.html
@@ -25,9 +25,9 @@
 <body>
     <header>
         <nav>
-            <div class="logo"> <a href="index.html"> <img src="logo.svg" alt="logo"></a></div>
+            <div class="logo_navn"> <a href="index.html"> Ana<span>-</span>Hita</a></div>
             <ul class="menu_liste">
-                <li class="portfolio_om_mig">Portfolio</li>
+                <li> <a href="index.html#vaelg_tema" class="nav_link portfolio_om_mig">Portfolio</a></li>
                 <li><a href="tema2.html" class="nav_link nav_tema">Tema 2</a></li>
                 <li><a href="tema3.html" class="nav_link nav_tema">Tema 3</a></li>
                 <li><a href="tema4.html" class="nav_link nav_tema">Tema 4</a></li>
