--- a/tema3.html
+++ b/tema3.html
@@ -44,6 +44,64 @@
     </header>
     <main>
         <h1>Tema 3</h1>
+
+        <div>
+            <img src="tema_blomster3.svg" alt="">
+        </div>
+
+        <article class="hvid_baggrund">
+
+
+            <div class="emnesite_tekst_og_border">
+                <h2 class="emnesite_overskrift">Emnesite og studiestart</h2>
+                <div class="emnesite_tekst">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
+                        ex
+                        veniam
+                        ducimus
+                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
+                        facilis.
+                        Lorem
+                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
+                        cum
+                        harum
+                        at
+                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
+                        mollitia
+                        rerum.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
+                        ex
+                        veniam
+                        ducimus
+                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
+                        facilis.
+                        Lorem
+                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
+                        cum
+                        harum
+                        at
+                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
+                        mollitia
+                        rerum.
+                    </p>
+                </div>
+            </div>
+
+        </article>
+        <div class="proces_loesning_grid">
+            <div class="proces_container">
+                <h2>Proces</h2>
+                <img src="fotos/tema_4_foto.JPG" alt="">
+            </div>
+            <div class="loesning_container">
+                <h2>Løsning</h2>
+                <div class="knap"><a href="#">Se løsning her</a></div>
+                <div class="knap"><a href="#">Se løsning her</a></div>
+            </div>
+        </div>
     </main>
     <footer></footer>
     <script src="javascript.js"></script>
