--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="tema3.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/tema_3_foto111.JPG" alt="Tema 3">
+                        <img src="fotos/tema_3_foto111.JPG" alt="Tema3">
                     </div>
                     <p>Tema 3</p>
                 </div>
@@ -83,7 +83,7 @@
             <a href="tema4.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/tema_4_foto.JPG" alt="">
+                        <img src="fotos/tema_4_foto.JPG" alt="tema 4">
                     </div>
                     <p>Tema 4</p>
                 </div>
@@ -106,10 +106,10 @@
             </a>
             <a href="ommig.html">
                 <div class="temax">
-                    <div class="temax_img">
+                    <div class="ramme_og_filter">
                         <img src="fotos/tema_5_foto.JPG" alt="">
                     </div>
-                    <p>Om mig</p>
+                    <p id="ommig_tekst_mindre">Om mig</p>
                 </div>
             </a>
         </section>
