--- a/tema2.html
+++ b/tema2.html
@@ -45,7 +45,39 @@
     </header>
     <main>
         <h1>Tema 2</h1>
+        <!-- links til løsning -->
+        <div><a href="http://hita.dk/kea/02_web/01_website/website/index.html" target="_blank">Se studiestartsprøven</a>
+        </div>
+        <div><a href="https://hita.dk/kea/02_web/02_emnesite/emnesite/index.html" target="_blank">Se emnesitet</a></div>
 
+        <h2>Proces</h2>
+        <div>
+            <a href="#id">Styletyle</a>
+            <a href="#id">Wireframe</a>
+            <a href="#id">Protoype/mockup</a>
+        </div>
+        <div class="proces_grid">
+            <img src="fotos/tema_2/styletile.jpg" alt="Styletile">
+            <div>
+                <p>Emnesite - Styletile</p>
+            </div>
+            <img src="fotos/tema_2/wireframe_fs.jpg" alt="">
+            <div>
+                <p>Emnesite - Wireframe til forside</p>
+            </div>
+            <img src="fotos/tema_2/wireframe_radise.jpg" alt="">
+            <div>
+                <p>Emnesite - Wireframe til radise-side</p>
+            </div>
+            <img src="fotos/tema_2/prototype_fs.jpg" alt="">
+            <div>
+                <p>Emnesite - Protoype af radise-side</p>
+            </div>
+            <img src="fotos/tema_2/prototype_radise.jpg" alt="">
+            <div>
+                <p>Emnesite - Prototype af radise-side</p>
+            </div>
+        </div>
     </main>
     <footer></footer>
     <script src="javascript.js"></script>
