--- a/tema4.html
+++ b/tema4.html
@@ -42,7 +42,13 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+
+        <!-- links til løsning -->
+        <div><a href="https://hita.dk/kea/04_animation/website/index.html" target="_blank">Se Javascript spillet</a>
+        </div>
+
+    </main>
     <footer></footer>
     <script src="javascript.js"></script>
 </body>
