--- a/tema5.html
+++ b/tema5.html
@@ -44,6 +44,11 @@
     </header>
     <main>
         <h1>Tema 5</h1>
+        <!-- links til løsning -->
+        <div><a href="https://anah0116.github.io/pilotsite/" target="_blank">Se pilotsite</a></div>
+        <div><a href="#" target="_blank">Se pilotsite Github repository </a></div>
+        <div><a href="https://anah0116.github.io/redesign/index.html" target="_blank">Se redesignet</a></div>
+        <div><a href="#" target="_blank">Se redesign temadokumentationen</a></div>
     </main>
     <footer></footer>
     <script src="javascript.js"></script>
