--- a/tema3.html
+++ b/tema3.html
@@ -14,6 +14,8 @@
         href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:wght@300;400;500;600&display=swap"
         rel="stylesheet">
     <!-- favicon herunder -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <!-- Css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="menu.css">
@@ -45,8 +47,13 @@
     <main>
         <h1>Tema 3</h1>
 
-        <div>
+        <!-- 
+            Den gamle blosmt 07.01.  kl 18
+            <div>
             <img src="tema_blomster3.svg" alt="">
+        </div> -->
+        <div>
+            <img src="SVG/tema_blomster_svg.svg" alt="">
         </div>
 
         <article class="hvid_baggrund">
@@ -102,6 +109,8 @@
                 <div class="knap"><a href="#">Se løsning her</a></div>
             </div>
         </div>
+
+        <div><a href=""></a></div>
     </main>
     <footer></footer>
     <script src="javascript.js"></script>
