--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="tema3.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/tema_3_foto111.JPG" alt="Tema3">
+                        <img src="fotos/tema_3_foto111.jpg" alt="Tema3">
                     </div>
                     <p>Tema 3</p>
                 </div>
