--- a/tema2.html
+++ b/tema2.html
@@ -45,37 +45,92 @@
     </header>
     <main>
         <h1>Tema 2</h1>
-        <!-- links til løsning -->
-        <div><a href="http://hita.dk/kea/02_web/01_website/website/index.html" target="_blank">Se studiestartsprøven</a>
-        </div>
-        <div><a href="https://hita.dk/kea/02_web/02_emnesite/emnesite/index.html" target="_blank">Se emnesitet</a></div>
 
-        <h2>Proces</h2>
+
         <div>
-            <a href="#id">Styletyle</a>
-            <a href="#id">Wireframe</a>
-            <a href="#id">Protoype/mockup</a>
+            <img src="SVG/tema_blomster_svg.svg" alt="">
+        </div>
+
+        <article class="hvid_baggrund">
+
+
+            <div class="tema_tekst_og_border">
+                <h2 class="tema_overskrift">Grundlæggende web</h2>
+                <div class="tema_tekst">
+                    <p>
+                        I dette Tema skulle vi lave studiestartsprøven samt udvikle et website ud fra valgt stil og eget
+                        emne.
+                        Vi blev introduceret til responsivt website, derfor har jeg udviklet mit emnesite til at have
+                        flere kolonner i grids ved
+                        desktop og kun 1-2 kolonner ved mobilversion.
+
+                        Vi lærte også om wirefreames og mockups. Min udvikling af wireframes og mockups hjalp mig i
+                        kodningsprocessen, da jeg
+                        dermed havde noget konkret at forholde mig til og kode efter, så jeg undgik at designe mens jeg
+                        kodede. Jeg lærte
+                        vigtigheden af mockups både som en del af designprocessen men også som et led i kodning af
+                        designet også.
+
+                    </p>
+                    <p>
+                        I tema 2, blev vi også introduceret for bla. design konventioner, kontraster og farveharmonier.
+                        Da mit emnesite emne er
+                        ”Grøntsager - de røde”, valgte jeg derfor jordnære og mere afdæmpede farver. Hvor grøn og rød er
+                        hovedfarverne, der
+                        henholdsvis symboliserer grøntsager generelt og de røde grøntsager, der også er kontrastfarver.
+
+                        Til min emnesite har valgte jeg stilen ’retro’. Jeg gjorde brug af tekstur, ved at indsætte
+                        papirtekstur som baggrund
+                        samt tavle tekstur til faktaboksene. Her medvirker teksturen til en opslagstavle effekt, som jeg
+                        ønskede ift.
+                        komposition. Som kontrast og modspil til teksturen på baggrund og tavlen, står den helt
+                        teksturfri menu-bar og footer.
+
+                    </p>
+                </div>
+            </div>
+
+        </article>
+        <h2 class="loes_pro_overskrift">Løsning</h2>
+        <div class="loesning_grid">
+            <div>
+                <div class="foto_erstatning"></div>
+                <div class="knap"><a href="http://hita.dk/kea/02_web/01_website/website/index.html" target="_blank">Se
+                        studiestartsprøve</a></div>
+            </div>
+            <div>
+                <div class="foto_erstatning"></div>
+                <div class="knap"><a href="https://hita.dk/kea/02_web/02_emnesite/emnesite/index.html"
+                        target="_blank">Se emnesite</a></div>
+            </div>
+        </div>
+
+        <h2 class="loes_pro_overskrift">Proces</h2>
+        <div class="proces_menu">
+            <a href="#styletile2">Styletyle</a>
+            <a href="#wireframe2">Wireframe</a>
+            <a href="#prototype2">Protoype/mockup</a>
         </div>
         <div class="proces_grid">
-            <img src="fotos/tema_2/styletile.jpg" alt="Styletile">
-            <div>
-                <p>Emnesite - Styletile</p>
+            <img class="proces_ekstra_pad" src="fotos/tema_2/styletile.jpg" alt="Styletile">
+            <div id="styletile2">
+                <p><span>Emnesite</span> - Styletile</p>
             </div>
             <img src="fotos/tema_2/wireframe_fs.jpg" alt="">
-            <div>
-                <p>Emnesite - Wireframe til forside</p>
+            <div id="wireframe2">
+                <p><span>Emnesite</span> - Wireframe til forside</p>
             </div>
-            <img src="fotos/tema_2/wireframe_radise.jpg" alt="">
+            <img class="proces_ekstra_pad" src="fotos/tema_2/wireframe_radise.jpg" alt="">
             <div>
-                <p>Emnesite - Wireframe til radise-side</p>
+                <p><span>Emnesite</span> - Wireframe til radise-side</p>
             </div>
             <img src="fotos/tema_2/prototype_fs.jpg" alt="">
-            <div>
-                <p>Emnesite - Protoype af radise-side</p>
+            <div id="prototype2">
+                <p><span>Emnesite</span> - Protoype af radise-side</p>
             </div>
             <img src="fotos/tema_2/prototype_radise.jpg" alt="">
             <div>
-                <p>Emnesite - Prototype af radise-side</p>
+                <p><span>Emnesite</span> - Prototype af radise-side</p>
             </div>
         </div>
     </main>
