--- a/tema3.html
+++ b/tema3.html
@@ -13,14 +13,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:wght@300;400;500;600&display=swap"
         rel="stylesheet">
-    <!-- favicon herunder -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
     <!-- Css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="menu.css">
     <!-- indsæt titel -->
     <title>Tema 3</title>
+    <!-- favicon herunder -->
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="/favicon-16x16.png" />
 </head>
 
 <body>
@@ -46,12 +47,6 @@
     </header>
     <main>
         <h1>Tema 3</h1>
-
-        <!-- 
-            Den gamle blosmt 07.01.  kl 18
-            <div>
-            <img src="tema_blomster3.svg" alt="">
-        </div> -->
         <div>
             <img src="SVG/tema_blomster_svg.svg" alt="">
         </div>
@@ -59,9 +54,9 @@
         <article class="hvid_baggrund">
 
 
-            <div class="emnesite_tekst_og_border">
-                <h2 class="emnesite_overskrift">Emnesite og studiestart</h2>
-                <div class="emnesite_tekst">
+            <div class="tema_tekst_og_border">
+                <h2 class="tema_overskrift">Emnesite og studiestart</h2>
+                <div class="tema_tekst">
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
                         ex
@@ -98,7 +93,47 @@
             </div>
 
         </article>
-        <div class="proces_loesning_grid">
+        <h2 class="loes_pro_overskrift">Løsning</h2>
+        <div class="loesning_grid">
+            <div>
+                <div class="foto_erstatning"></div>
+                <div class="knap"><a href="#">Se studiestartsprøve</a></div>
+            </div>
+            <div>
+                <div class="foto_erstatning"></div>
+                <div class="knap"><a href="#">Se emnesite</a></div>
+            </div>
+        </div>
+
+        <h2 class="loes_pro_overskrift">Proces</h2>
+        <div class="proces_menu">
+            <a href="#id">Styletyle</a>
+            <a href="#id">Wireframe</a>
+            <a href="#id">Protoype/mockup</a>
+        </div>
+        <div class="proces_grid">
+            <img class="proces_ekstra_pad" src="fotos/tema_2/styletile.jpg" alt="Styletile">
+            <div>
+                <p><span>Emnesite</span> - Styletile</p>
+            </div>
+            <img src="fotos/tema_2/wireframe_fs.jpg" alt="">
+            <div>
+                <p><span>Emnesite</span> - Wireframe til forside</p>
+            </div>
+            <img class="proces_ekstra_pad" src="fotos/tema_2/wireframe_radise.jpg" alt="">
+            <div>
+                <p><span>Emnesite</span> - Wireframe til radise-side</p>
+            </div>
+            <img src="fotos/tema_2/prototype_fs.jpg" alt="">
+            <div>
+                <p><span>Emnesite</span> - Protoype af radise-side</p>
+            </div>
+            <img src="fotos/tema_2/prototype_radise.jpg" alt="">
+            <div>
+                <p><span>Emnesite</span> - Prototype af radise-side</p>
+            </div>
+        </div>
+        <!-- <div class="proces_loesning_grid">
             <div class="proces_container">
                 <h2>Proces</h2>
                 <img src="fotos/tema_4_foto.JPG" alt="">
@@ -108,11 +143,15 @@
                 <div class="knap"><a href="#">Se løsning her</a></div>
                 <div class="knap"><a href="#">Se løsning her</a></div>
             </div>
-        </div>
+        </div> -->
 
         <div><a href=""></a></div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Portfolio af Anahita</p>
+        <p>dato</p>
+        <p>KEA, Multimediedesign - 1. semester</p>
+    </footer>
     <script src="javascript.js"></script>
 </body>
 
