--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
         </nav>
     </header>
     <main>
-        <div>
-            <div></div>
-            <div class="portefolio_titel">
-                <p>FØRSTE</p>
-                <p>SEMESTER</p>
-                <p>PÅ MMD</p>
+        <div class="fs_blomster_titel_grid">
+            <img class="fs_blomster" src="SVG/forside_blomster.svg" alt="Blomster">
+            <div>
+                <div class="portefolio_titel">
+                    <p>FØRSTE</p>
+                    <p>SEMESTER</p>
+                    <p>PÅ MMD</p>
+                </div>
             </div>
         </div>
         <div>
