--- a/tema2.html
+++ b/tema2.html
@@ -118,24 +118,24 @@
             <a href="#prototype2">Protoype/mockup</a>
         </div>
         <div class="proces_grid">
-            <img class="proces_ekstra_pad" src="fotos/tema_2/styletile.jpg" alt="Styletile">
-            <div id="styletile2">
+            <img class="proces_ekstra_pad order2" src="fotos/tema_2/styletile.jpg" alt="Styletile">
+            <div id="styletile2 order1">
                 <p><span>Emnesite</span> - Styletile</p>
             </div>
-            <img src="fotos/tema_2/wireframe_fs.jpg" alt="">
-            <div id="wireframe2">
+            <img class="order4" src="fotos/tema_2/wireframe_fs.jpg" alt="">
+            <div class="order3" id="wireframe2 ">
                 <p><span>Emnesite</span> - Wireframe til forside</p>
             </div>
-            <img class="proces_ekstra_pad" src="fotos/tema_2/wireframe_radise.jpg" alt="">
-            <div>
+            <img class="proces_ekstra_pad order6" src="fotos/tema_2/wireframe_radise.jpg" alt="">
+            <div class="order5">
                 <p><span>Emnesite</span> - Wireframe til radise-side</p>
             </div>
-            <img src="fotos/tema_2/prototype_fs.jpg" alt="">
-            <div id="prototype2">
+            <img class="order8" src="fotos/tema_2/prototype_fs.jpg" alt="">
+            <div class="order7" id="prototype2">
                 <p><span>Emnesite</span> - Protoype af radise-side</p>
             </div>
-            <img src="fotos/tema_2/prototype_radise.jpg" alt="">
-            <div>
+            <img class="order10" src="fotos/tema_2/prototype_radise.jpg" alt="">
+            <div class="order9">
                 <p><span>Emnesite</span> - Prototype af radise-side</p>
             </div>
         </div>
