--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
     </header>
     <main>
         <div class="fs_blomster_titel_grid">
-            <img class="fs_blomster" src="SVG/forside_blomster_ny.svg" alt="Blomster">
-            <div>
+            <div><!--  denne div er NY, slet evt -->
+                <img class="fs_blomster" src="SVG/forside_blomster_ny.svg" alt="Blomster">
+            </div>
+            <div class="ny_class_til_titel">
                 <div class="portefolio_titel">
                     <p>FØRSTE</p>
                     <p>SEMESTER</p>
